Making changes after a review.
1) Replaced nio with io.
2) Optimized pom.xml.
3) Changed how the DefaultDaraSource works.
4) Changed the class JDBCTransactionDao.
5) Parsing of ResultSet is moved to a separate method.
6) The structure of writing entities to the XML file has been changed.