@@ -1,26 +1,26 @@
 package com.glushkov.fileManager;
 
 
-import java.io.*;
-import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.io.FileInputStream;
+import java.io.FileWriter;
+import java.io.IOException;
 
 public class DefaultFileManager implements FileManager {
 
     public String readFile(String pathToFile) {
-        try {
-            return new String(Files.readAllBytes(Paths.get(pathToFile)));
+
+        try(FileInputStream fileInputStream = new FileInputStream(pathToFile)) {
+              return new String(fileInputStream.readAllBytes());
         } catch (IOException ioException) {
-            throw new RuntimeException("Please check path to file: " + pathToFile + " and try again.");
+            throw new RuntimeException("Please check path to file: " + pathToFile + " and try again.", ioException);
         }
     }
 
     public void saveTo(String pathToFile, String text) {
         try (FileWriter writer = new FileWriter(pathToFile, false)) {
             writer.write(text);
-            writer.flush();
-        } catch (IOException ex) {
-            System.out.println("Please check path to file: " + pathToFile + " and try again.");
+        } catch (IOException ioException) {
+            throw new RuntimeException("Please check path to file: " + pathToFile + " and try again.", ioException);
         }
     }
 }
